# numpy_introduction

./: introduction-to-numpy.ipynb  introduction_to_matplotlib.ipynb  numpy-exercises.ipynb  pyproject.toml
