[tool.poetry]
name = "numpy-practice"
version = "0.1.0"
description = ""
authors = ["bjamyl <alhassanjamil0@gmail.com>"]
readme = "README.md"
packages = [{include = "numpy_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
